<resources>
    <string name="app_name">Gaugeter</string>
    <string name="filter">Filter</string>
    <string name="search_new_devices">Search new devices</string>
    <string name="delete">Delete</string>
    <string name="settings">Settings</string>
    <string name="measurement_system">Measurement System</string>
    <string name="login">Login</string>
    <string name="logout">Log out</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="complete">Complete</string>
    <string name="jobs_by_date">Jobs by date</string>
    <string name="search">Search</string>

    <string name="menu_open">Open</string>
    <string name="menu_close">Close</string>
    <string name="menu_account_settings">Account settings</string>

    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_repeat_password">Repeat password</string>
    <string name="hint_device_name">Device name</string>

    <string name="text_select_gauges">Select which gauges you want to see on the screen</string>
    <string name="text_select_measurement_system">Select your preferred measuring units</string>
    <string name="text_oil_pressure">"Oil pressure: "</string>
    <string name="text_oil_temp">"Oil temperature: "</string>
    <string name="text_water_temp">"Water temperature: "</string>
    <string name="text_charge">"Charge: "</string>

    <string name="volts">"V"</string>
    <string name="degrees_celsius">"°C"</string>
    <string name="degrees_fahrenheit">"°F"</string>
    <string name="bar">"bar"</string>
    <string name="psi">"psi"</string>

    <string name="pref_version">Version</string>
    <string name="pref_language">Language</string>
    <string name="pref_measurement_system">Measurement System</string>
    <string name="pref_gauges">Gauges</string>

    <string name="message_connection_closed">Connection to device closed!</string>
    <string name="message_user_id_too_short">Username is too short!</string>
    <string name="message_password_too_short">Password is too short!</string>
    <string name="message_passwords_do_not_match">Passwords do not match!</string>

    <string name="error_http_bad_credentials">Wrong username or password.</string>
    <string name="error_http_internal_server">Server error.</string>
    <string name="error_http_update_work">Could not update your work.</string>

    <string name="error_bluetooth">Bluetooth error occurred</string>
    <string name="error_bluetooth_could_not_bond">Could not create bond with the device.</string>

    <string name="title_remove_device">Remove device</string>
    <string name="title_remove_job">Remove job</string>
    <string name="title_add_device">Add device</string>
    <string name="title_jobs_by_date">Jobs By Date</string>
    <string name="title_finish_job">Finish job</string>
    <string name="title_devices">Devices</string>
    <string name="title_edit_account">Edit account</string>
    <string name="title_edit_device">Edit device</string>

    <string name="dialog_remove_device">Are you sure you want to remove this device from your account?</string>
    <string name="dialog_remove_job">Are you sure you want to remove this job from your account?</string>
    <string name="dialog_add_device">Are you sure you want to add %s to your account?</string>
    <string name="dialog_finish_job">Are you sure you want to finish current job?</string>

    <string name="label_user_devices">User devices</string>
    <string name="label_found_devices">Found devices</string>

</resources>
