<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListPreference
        android:key="languagePref"
        android:dialogTitle="@string/pref_language"
        android:entries="@array/language_entries"
        android:entryValues="@array/language_values"
        android:title="@string/pref_language"
        android:defaultValue="en_US"/>

    <ListPreference
        android:key="measurementSystemPref"
        android:summary="@string/text_select_measurement_system"
        android:dialogTitle="@string/pref_measurement_system"
        android:entries="@array/measurement_system_values"
        android:entryValues="@array/measurement_system_values"
        android:title="@string/pref_measurement_system"
        android:defaultValue="Celsius"/>

    <!--<MultiSelectListPreference
        android:key="gaugesPref"
        android:dialogTitle="@string/pref_gauges"
        android:summary="@string/text_select_gauges"
        android:entries="@array/gauges_values"
        android:entryValues="@array/gauges_values"
        android:title="@string/pref_gauges"
        android:defaultValue="@array/gauges_default_values"/>-->

    <Preference
        android:key="versionPref"
        android:title="@string/pref_version" />

</PreferenceScreen>