<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@id/menuJobsByDate"
        android:icon="@drawable/ic_calendar"
        android:title="@string/jobs_by_date"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@id/menuAccountSettings"
        android:icon="@drawable/ic_account"
        android:title="@string/account"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@id/menuSettings"
        android:icon="@drawable/settings"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@id/menuLogout"
        android:icon="@drawable/ic_account"
        android:title="@string/logout"
        app:showAsAction="always"/>

</menu>