<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:background="@drawable/input_field_background"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingStart="8dp"
                android:paddingEnd="16dp"
                android:focusableInTouchMode="true">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_filter"
                    android:layout_gravity="center_vertical|end"/>

                <EditText
                    android:id="@id/filter"
                    android:layout_width="0dp"
                    android:layout_weight="7"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/text_cursor"
                    android:textSize="@dimen/text_size_big"
                    android:hint="@string/filter"
                    android:maxLines="1"
                    android:background="@null"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_user_devices"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding_8"/>

            <android.support.v7.widget.RecyclerView
                android:id="@id/recyclerViewPairedDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:choiceMode="singleChoice"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_found_devices"
                android:layout_gravity="center_horizontal"
                android:padding="@dimen/padding_8"/>

            <android.support.v7.widget.RecyclerView
                android:id="@id/recyclerViewFoundDevices"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false"
                android:choiceMode="singleChoice"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</RelativeLayout>

